Bunch of things to make the website deployable